# EC

./: .gitignore  ChangeLog  EC-v1.cbp  EC-v1.depend  EC-v1.layout  EC-v1.workspace  EC.cbp  EC.depend  EC.layout  EC.sln  EC.vcxproj  EC.vcxproj.filters  Makefile.am  TODO  configure.ac  initBoard  octetos-EC.cbp  octetos-EC.depend  octetos-EC.layout
1/: EC.glade  application.cc  application.hh  community-gtk-main.cc  community-gtk.cc  community-gtk.hh  ec-gtk.cc  ec-gtk.hh  ec.hh  group-gtk-main.cc  group-gtk.cc  group-gtk.hh  gtk.cc  gtk.hh  math-application.cc  math-application.hh  math-gui.cc  math.hh  worker.cc  worker.hh
src/: GA-ext.hh  GA-max.cc  GA-max.hh  GA-schedule.cc  GA-sudoku.cc  GA-sudoku.hh  GA-templete.cc  GA-templete.hh  GA-trans-region.cc  GA-trans.cc  GA-trans.hh  GA.cc  GA.hh  Makefile.am  MaxMin_x2.cc  Program-tree.cc  Program-tree.hh  Program.cc  Program.hh  ae-sudoku-serie.cc  core.cc  core.hh  ea-sudoku-serie.cc  ea-sudoku.cc  ec-max-templete.cc  ec-max.cc  ec-schedule.cc  ec-sudoku.cc  ec-trans.cc  ec.cc  ec.hh  main.cc  max.cc  max.hh  octetos-EC.pc.in  schedule-data.cc  schedule-data.hh  schedule-eval.cc  schedule-output.cc  schedule-testing.cc  (+9 more)
tests/: Makefile.am  groups.csv  main.cc  rooms.csv  subjects.csv  teachers-noday.csv  teachers-subjects.csv  teachers.csv  v0-max.cc  v0-schedule.cc  v0-sudoku.cc  v0.cc  v1.cc  v1.hh
tests/1/: develop-formula-1.cc  formule.cc  formule.hh  nodes.cc  nodes.hh
tests/en/: rooms.csv  teachers.csv
tests/es/: rooms.csv  teachers.csv
vs/dll/: dll.sln  dll.vcxproj  dll.vcxproj.filters
